cncProd/force-app/main/default/objects/Campaign_Invited_members__c/Campaign_Invited_members__c.object-meta.xml
<CustomObject>
    <description>Target customer / lead for campaign initiate. i.e promo code, voucher etc....</description>
    <label>Campaign Invited members</label>
    <nameField>
        <displayFormat>Member-{00000000}</displayFormat>
        <label>Campaign Invited members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Invited members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>