cncProd/force-app/main/default/objects/Campaign_Invited_members__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Email address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>