cncProd/force-app/main/default/objects/Campaign_Invited_members__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <inlineHelpText>SG number only and requires 65</inlineHelpText>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>