cncProd/force-app/main/default/objects/Campaign_Invited_members__c/fields/Redeem__c.field-meta.xml
<CustomField>
    <fullName>Redeem__c</fullName>
    <label>Redeem?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redeemed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>